src/main/java/com/example/user/common/errors/UndefinedError.java
package com.example.user.common.errors;

public class UndefinedError extends BaseError {
    public UndefinedError(Exception ex) {
        super(ex.getMessage());
    }
}
